# symbolic-math

./: CMakeLists.txt  CS-Final-Project.1  expr.cpp  expr.h  expr_function.h  expr_helpers.h  expr_latex.h  expr_operator.h  expr_parse.h  expr_tree.h  expr_tree_differentiate.h  expr_tree_evaluate.h  expr_tree_optimize_consolidate_factors.h  expr_tree_optimize_consolidate_powers.h  expr_tree_optimize_consolidate_scalars.h  expr_tree_optimize_consolidate_terms.h  expr_tree_optimize_const_prod_pow.h  expr_tree_optimize_distribute_constants.h  expr_tree_optimize_redundant_operators.h  expr_tree_sort_children.h  expr_variable.h  main.cpp  tests.txt
CS-Final-Project.xcodeproj/: brianreavis.mode1v3  brianreavis.pbxuser  project.pbxproj
docs/: README  eqns.tex  expr.h  test_large.tex  tests.aux  tests.tex  tests.toc  tests_results.aux  tests_results.tex  tests_results_eval.tex
